# BrainDICOM

./: CMakeLists.txt  License.md  Readme.md  dicomimageprovider.cpp  dicomimageprovider.h  dicomtagsmodel.cpp  dicomtagsmodel.h  main.cpp  main.qml  qml.qrc  settings.h  utility.cpp  utility.h
kernels/: imageprocessing.h
ui/: AboutWindow.qml  ContentPanel.qml  MenuBar.qml  MenuCheckBoxItem.qml  MenuItem.qml  MenuSeparator.qml  Panel.qml  StatusBar.qml  TableViewContextMenu.qml  Theme.qml  ToolBar.qml  ToolButton.qml
